--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "bluebird": "^3.5.1",
+    "express-validator": "^4.3.0",
     "nodemon": "^1.12.1",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4"
